src/objects/Litigation_Data__c.object
<CustomObject>
    <description>Custom object to store the Litigations data.</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N60000001Z2t9EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Court_Date__c</fullName>
        <label>Court Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Foundation_User__c</fullName>
        <label>Last Modified By Foundation User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time_in_Foundation__c</fullName>
        <label>Last Modified Date/Time in Foundation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Law_Firm__c</fullName>
        <label>Law Firm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litigation_Closure_Reason__c</fullName>
        <label>Litigation Closure Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litigation_Flag_FND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Litigation Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Litigation_Notes__c</fullName>
        <label>Litigation Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Amount__c</fullName>
        <label>Orginal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Litigation Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Account_ID__c</columns>
        <columns>Litigation_Flag_FND__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Litigation Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Litigations Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>